force-app/main/default/objects/Intake_Specialist__c/Intake_Specialist__c.object-meta.xml
<CustomObject>
    <label>Intake Specialist</label>
    <nameField>
        <label>Intake Specialist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intake Specialists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>