force-app/main/default/objects/Intake_Specialist__c/fields/Current_Active_Count__c.field-meta.xml
<CustomField>
    <fullName>Current_Active_Count__c</fullName>
    <label>Current Active Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>