force-app/main/default/objects/Intake_Specialist__c/fields/Has_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Has_Capacity__c</fullName>
    <formula>IF(
    ISBLANK(Current_Active_Count__c), 
    TRUE, 
    Current_Active_Count__c &lt; Max_Capacity__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Capacity</label>
    <type>Checkbox</type>
</CustomField>