force-app/main/default/objects/Intake_Specialist__c/fields/Max_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Max_Capacity__c</fullName>
    <defaultValue>15</defaultValue>
    <label>Max Capacity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>