force-app/main/default/objects/Intake_Specialist__c/fields/Priority_Ranking_At__c.field-meta.xml
<CustomField>
    <fullName>Priority_Ranking_At__c</fullName>
    <label>Priority Ranking At</label>
    <type>DateTime</type>
</CustomField>